// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Underline lex("__a
b__") .render() 1`] = `
"[u]a
b[/u]"
`;

exports[`Underline lex("__a
b__") .tokens 1`] = `
[
  Text {
    "content": "a
b",
    "literal": "a
b",
    "scope": "inline",
  },
]
`;

exports[`Underline lex("__a_b__") .render() 1`] = `"[u]a_b[/u]"`;

exports[`Underline lex("__a_b__") .tokens 1`] = `
[
  Text {
    "content": "a_b",
    "literal": "a_b",
    "scope": "inline",
  },
]
`;

exports[`Underline lex("__foo \\_\\_ bar__") .render() 1`] = `"[u]foo __ bar[/u]"`;

exports[`Underline lex("__foo \\_\\_ bar__") .tokens 1`] = `
[
  Text {
    "content": "foo \\_\\_ bar",
    "literal": "foo \\_\\_ bar",
    "scope": "inline",
  },
]
`;

exports[`Underline lex("__foo__ bar") .render() 1`] = `"[u]foo[/u]"`;

exports[`Underline lex("__foo__ bar") .tokens 1`] = `
[
  Text {
    "content": "foo",
    "literal": "foo",
    "scope": "inline",
  },
]
`;

exports[`Underline lex("__foo__") .render() 1`] = `"[u]foo[/u]"`;

exports[`Underline lex("__foo__") .tokens 1`] = `
[
  Text {
    "content": "foo",
    "literal": "foo",
    "scope": "inline",
  },
]
`;
